# pratik_ai_eval

./: .gitignore  Makefile  README.md  REVIEWER.md  pyproject.toml
frontend/: README.md  index.html  package-lock.json  package.json  vite-plugin-a2-worktree.test.ts  vite-plugin-a2-worktree.ts  vite-plugin-a3-fraud.test.ts  vite-plugin-a3-fraud.ts  vite-plugin-a4-modernization.test.ts  vite-plugin-a4-modernization.ts  vite-plugin-a5-review.test.ts  vite-plugin-a5-review.ts  vite-plugin-a6-performance.test.ts  vite-plugin-a6-performance.ts  vite-plugin-b1-scan.ts  vite-plugin-b2-scan.test.ts  vite-plugin-b2-scan.ts  vite-plugin-b3-tests.test.ts  vite-plugin-b3-tests.ts  vite-plugin-b4-api.test.ts  vite-plugin-b4-api.ts  vite-plugin-b5-api.test.ts  vite-plugin-b5-api.ts  vite-plugin-b6-rust.test.ts  vite-plugin-b6-rust.ts  vite-plugin-d1-terraform.test.ts  vite-plugin-d1-terraform.ts  vite-plugin-d2-docker.test.ts  vite-plugin-d2-docker.ts  vite-plugin-d3-ci.test.ts  vite-plugin-d3-ci.ts  vite-plugin-d4-k8s.test.ts  vite-plugin-d4-k8s.ts  vite-plugin-d5-bootstrap.test.ts  vite-plugin-d5-bootstrap.ts  vite-plugin-d6-observability.test.ts  vite-plugin-d6-observability.ts  vite-plugin-i4-api.test.ts  (+6 more)
tasks/a3-polyglot-mini-system-fastapi-node-worker-rust-engine/engine/: Cargo.toml
tasks/a3-polyglot-mini-system-fastapi-node-worker-rust-engine/engine/src/: lib.rs  main.rs
tasks/b6-rust-greenfield/: Cargo.toml  README.md
tasks/b6-rust-greenfield/artifacts/: run-proof.txt
tasks/b6-rust-greenfield/src/: lib.rs  main.rs
tasks/b6-rust-greenfield/tests/: cli_integration.rs
(+352 files in other folders)
