[package]
name = "fraud-engine"
version = "0.1.0"
edition = "2021"
description = "A3 eval — Rust fraud scoring engine"

[lib]
name = "fraud_engine"
path = "src/lib.rs"

[[bin]]
name = "fraud-engine"
path = "src/main.rs"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
